--- a/index.html
+++ b/index.html
@@ -11,40 +11,28 @@
 
 <body>
     <header>
+        <div class="presentation">
+                    Hello I´m Ángel Pérez.
+            <span class="dedication">
+                A fullstack developer
+            </span>
+        </div>
+        <span>angel.options()</span>
         <nav>
             <div class="navigation-menu">
-                <div>
-                    <a>
-                        Home
-                    </a>
+                <div class="buttonLinkNav">
+                        me()
                 </div>
-                <div>
-                    <a href="about.html">
-                        About
-                    </a>
+                <div class="buttonLinkNav">
                 </div>
-                <div>
-                    <a href="index.html">
-                        Portfolio
-                    </a>
+                <div class="buttonLinkNav">
+                        job()
                 </div>
-                <div>
-                    <a href="contact.html">
-                        Contact
-                    </a>
+                <div class="buttonLinkNav">
+                        contact()
                 </div>
             </div>
         </nav>
-        <div class="presentation">
-            <div>
-                <h1>
-                    Hello I´m Ángel Pérez.
-                </h1>
-            </div>
-            <div class="dedication">
-                <h1>A fullstack developer</h1>
-            </div>
-        </div>
     </header>
 </body>
 
