crando botones de acceso

--- a/index.html
+++ b/index.html
@@ -11,25 +11,27 @@
 
 <body>
     <header>
-        <div class="presentation">
-                    Hello I´m Ángel Pérez.
-            <span class="dedication">
-                A fullstack developer
-            </span>
+        <div id="enter">
+            <div class="presentation">
+                Hello I´m Ángel Pérez.
+                <span class="dedication">
+                    A fullstack developer
+                </span>
+            </div>
+            <span>angel.options()</span>
         </div>
-        <span>angel.options()</span>
         <nav>
             <div class="navigation-menu">
                 <div class="buttonLinkNav">
-                        me()
+                    me()
                 </div>
                 <div class="buttonLinkNav">
                 </div>
                 <div class="buttonLinkNav">
-                        job()
+                    job()
                 </div>
                 <div class="buttonLinkNav">
-                        contact()
+                    contact()
                 </div>
             </div>
         </nav>
